# mdbook-toc

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  release.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  tests.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: lib.rs  main.rs
tests/: adds_toc.out.md  attributes.in.md  attributes.out.md  backslash_escapes.in.md  backslash_escapes.out.md  crlf.in.md  empty_document.in.md  escaped_brackets.in.md  escaped_brackets.out.md  github_marker.in.md  gitlab_marker.in.md  handles_inline_code.in.md  handles_inline_code.out.md  header_with_only_attributes.in.md  header_with_only_attributes.out.md  higher_max_level.in.md  it.rs  lower_max_level.out.md  mathjax.in.md  mathjax.out.md  multi_header.in.md  multi_header.out.md  multi_header_linear.in.md  multi_header_linear.out.md  nonhtml_marker_no_use.in.md  similar_heading_different_casing.in.md  similar_heading_different_casing.out.md  tables_untouched.out.md  tables_with_html.out.md  umlaute.in.md  umlaute.out.md  unique_slugs.in.md  unique_slugs.out.md  with_inline_code.in.md  with_inline_code.out.md
