[package]
name = "mdbook-toc"
version = "0.13.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add Table of Contents"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-toc"
repository = "https://github.com/badboy/mdbook-toc"
edition = "2018"
rust-version = "1.66"

[dependencies]
mdbook = "0.4.32"
pulldown-cmark = "0.9.3"
log = "0.4.19"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
serde_json = "1.0.104"
toml = "0.7.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
env_logger = "0.10.0"
